# MyGui

./: .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml  ci_tmp.yml  macos.yml  standalone.yml  ubuntu.yml  window.yml  windows.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt  conf.py
include/: mygui.hpp
include/mygui/Core/: Application.hpp  Base.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  MouseCodes.hpp  Window.hpp
include/mygui/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/mygui/Platform/Windows/: WindowsWindow.hpp
src/: greeter.cpp
src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Window.cpp
src/Platform/Windows/: WindowsWindow.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
test/src/: greeter.cpp  main.cpp  mygui.cpp
test/src/Core/: Base.cpp  KeyCodes.cpp  Layer.cpp  LayerStack.cpp  MouseCodes.cpp  Window.cpp
